fix missing controls on video and misalignment of centered bullet lists

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -74,6 +74,11 @@ h5::before {
   margin: 10px 15px 0 0;
 }
 
+div.text-center ul {
+  display: inline-block;
+  text-align: left;
+}
+
 .container-home {
   padding: 10vh 0;
 }
